# AI-Engineering-Bootcamp

./: .gitignore  Makefile  docker-compose.yml  main.py  pyproject.toml
apps/api/: pyproject.toml
apps/api/src/api/: app.py
apps/chatbot_ui/: pyproject.toml
apps/chatbot_ui/src/chatbot_ui/core/: config.py
notebooks/prerequisites/: 01-llm-apis.ipynb
